--- a/app/src/main/res/layout/decode_qr_fragment.xml
+++ b/app/src/main/res/layout/decode_qr_fragment.xml
@@ -34,14 +34,16 @@
             android:gravity="center"
 
             >
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="end|center"
                 android:padding="4dp"
-                android:text="Student Reg. Number:"
-                android:textSize="24sp"
+                android:text="Reg. Num:"
+                android:textSize="18sp"
+                android:textColor="@color/black"
                 />
 
             <TextView
@@ -70,8 +72,9 @@
                 android:layout_weight="1"
                 android:gravity="end|center"
                 android:padding="4dp"
-                android:text="Student Name:"
-                android:textSize="24sp"
+                android:text="Name:"
+                android:textSize="18sp"
+                android:textColor="@color/black"
                 />
 
             <TextView
@@ -102,7 +105,8 @@
                 android:gravity="end|center"
                 android:padding="4dp"
                 android:text="Student Photo:"
-                android:textSize="24sp"
+                android:textSize="18sp"
+                android:textColor="@color/black"
                 />
 
             <ImageView
@@ -130,8 +134,9 @@
                 android:layout_weight="1"
                 android:gravity="end|center"
                 android:padding="4dp"
-                android:text="Serial Number:"
-                android:textSize="24sp"
+                android:text="Serial Num:"
+                android:textSize="18sp"
+                android:textColor="@color/black"
                 />
 
             <TextView
@@ -160,8 +165,9 @@
                 android:layout_weight="1"
                 android:gravity="end|center"
                 android:padding="4dp"
-                android:text="Laptop Model:"
-                android:textSize="24sp"
+                android:text="Model:"
+                android:textSize="18sp"
+                android:textColor="@color/black"
                 />
 
             <TextView
@@ -190,8 +196,9 @@
                 android:layout_weight="1"
                 android:gravity="end|center"
                 android:padding="4dp"
-                android:text="Laptop Color"
-                android:textSize="24sp"
+                android:text="Color:"
+                android:textSize="18sp"
+                android:textColor="@color/black"
                 />
 
             <TextView
@@ -220,8 +227,9 @@
                 android:layout_weight="1"
                 android:gravity="end|center"
                 android:padding="4dp"
-                android:text="Laptop Photo"
-                android:textSize="24sp"
+                android:text="Laptop Photo:"
+                android:textSize="18sp"
+                android:textColor="@color/black"
                 />
 
             <ImageView
