make the create qr screen scrollable

--- a/app/src/main/res/layout/encode_to_qr_fragment.xml
+++ b/app/src/main/res/layout/encode_to_qr_fragment.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:gravity="center">
+    android:gravity="center"
+    android:scrollbars="vertical"
+    android:scrollbarAlwaysDrawVerticalTrack="true"
+    >
 
     <LinearLayout
         android:id="@+id/form_wrapper"
-        android:layout_width="0dp"
-        android:layout_height="640dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_marginStart="4dp"
@@ -414,4 +416,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
